--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,11 @@
 :host {
   display: flex;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
+  overflow: auto;
+  padding: 20px;
+  app-minesweeper {
+    margin: auto;
+  }
 }
