--- a/src/app/minesweeper/minesweeper/minesweeper.component.scss
+++ b/src/app/minesweeper/minesweeper/minesweeper.component.scss
@@ -265,7 +265,7 @@ $mask-paddng: 2px;
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%);
+        transform: translate(calc(-50% + 0.5px), calc(-50% + 0.5px));
       }
       &.minesweeper-is-down {
         background-color: $color-2;
@@ -299,6 +299,9 @@ $mask-paddng: 2px;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            color: $num-color-c;
+            font-size: grid(4);
+            line-height: 0;
           }
         }
       }
